--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "firebase-admin": "^12.0.0",
+    "zod": "^3.22.4"
   }
 }
